# copilotkit_demo

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  style.css
frontend/app/api/copilotkit/: route.ts
frontend/app/tool-widgets/: flight-tool.tsx  weather-tool.tsx
