[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph == 1.1.8",
    "copilotkit == 0.1.87",
    "langchain_openrouter == 0.2.1",
    "langchain-core == 1.3.0",
    "python-dotenv == 1.2.2",
    "ag-ui-langgraph == 0.0.33",
    "fastapi == 0.136.0",
    "uvicorn == 0.44.0"
]
